--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
 
 body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
+    justify-content: center;
+    height: 100vh;
     background-color: hsl(212, 45%, 89%);
     font-family: "Outfit", sans-serif;
 }
